Forbidden Lands v1.66 update
- Increased the range of each d66 dice to allow for custom rolls 0-100(normally, each d6 allows 1-6). While this does not effect the d66 roll on the sheet, it does allow more flexability for custom macros if desired.
- Fixed the translation list ordering for Skills and Stockpile.
- updated other translation files to match translation.json

--- a/Forbidden_Lands/translations/es.json
+++ b/Forbidden_Lands/translations/es.json
@@ -1,8 +1,8 @@
 {
-	"adult-2": "Adult +1",
+	"adult-2": "Adult+1",
 	"age": "Age",
 	"agility": "Agility",
-	"agility-abbr": " [agl]",
+	"agility-abbr": "Agi",
 	"agility-abbr-u": "AGI",
 	"animal-handling": "Animal Handling",
 	"api-dice": "api dice",
@@ -26,7 +26,7 @@
 	"armor2-bonus-total": "Total GEAR and SKILL dice included for armor2. @{armor2_ar}",
 	"arms-length-abbr": "Arm's L.",
 	"arrows": "Arrows",
-	"artifact": "Artifact",
+	"artifact": "Artifact Dice",
 	"artifact-bonus": "Artifact Bonus",
 	"attack": "Attack",
 	"attack-abbrv": "Attk",
@@ -61,7 +61,7 @@
 	"condition-thirsty": "You must drink a ration of water at least once per day. After a day without water, you become THIRSTY. @{thirsty}",
 	"condition-u": "CONDITIONS",
 	"consumable": "Consumable",
-	"consumable-note": "**nota:** está seguro/a que reduzcas a mano el dado consumible en la ficha si tiras ruina.",
+	"consumable-note": "**note:** be sure to manually reduce the consumable die on the sheet if you roll bane.",
 	"consumable-u": "CONSUMABLES",
 	"copper": "Copper",
 	"crafting": "Crafting",
@@ -97,7 +97,7 @@
 	"duration": "Duration",
 	"effects": "Effects",
 	"empathy": "Empathy",
-	"empathy-abbr": " [emp]",
+	"empathy-abbr": "Emp",
 	"encumbrance": "Encumbrance",
 	"encumbrance-current-abbr": "Current Encum",
 	"endurance": "Endurance",
@@ -164,7 +164,7 @@
 	"monster-attacks-u": "MONSTER ATTACKS",
 	"monster-name": "Monster's Name/Type",
 	"moun-u": "MOUNT",
-	"mount": "Mount's Gear",
+	"mount": "Mount",
 	"mounted": "Mounted",
 	"mounts-gear": "Mount's Gear",
 	"move": "Move",
@@ -187,10 +187,10 @@
 	"of-food": "of Food",
 	"of-torches": "of Torches",
 	"of-water": "of Water",
-	"old-3": "Old +2",
+	"old-3": "Old+2",
 	"old-announcements": "Old Announcements",
 	"older": "[older]",
-	"on-mount": "On Mount",
+	"on-mount": "Gear on Mount",
 	"one-hand-abbr": "1H",
 	"other": "Other",
 	"out-of-arrows": "Out of Arrows",
@@ -208,7 +208,7 @@
 	"production-outcome": "Production/Outcome",
 	"profession": "Profession",
 	"profession-abbrv": "Prof",
-	"push": " Push ",
+	"push": "Push",
 	"push-dice": "Push the Dice!",
 	"push-query": "Is the Dice Pool correct...? (hint:remove successes and bane) |Yes - Submit to Roll.,Dice Pool is correct.|No - Cancel.,Dice Pool needs to be corrected.",
 	"pushes-the-roll": "Pushes the Roll",
@@ -227,7 +227,7 @@
 	"reputation-bonus": "How well known are you? @{reputation}",
 	"reputation-roll": "Reputation Roll",
 	"reset-dice": "Reset dice pool.",
-	"roll": " Roll ",
+	"roll": "Roll",
 	"roll-agility": "Agility Roll",
 	"roll-dice": "Roll the Dice!",
 	"roll-dice-66": "Roll d66!",
@@ -235,7 +235,7 @@
 	"roll-empathy": "Empathy Roll",
 	"roll-strength": "Strength Roll",
 	"roll-wits": "Wits Roll",
-	"salary": "Salary",
+	"salary": "Salary copper/day",
 	"scouting": "Scouting",
 	"selected": "Selected",
 	"settings": "Settings",
@@ -243,8 +243,8 @@
 	"shield": "Shield",
 	"shield-bonus": "Record the shield's CURRENT bonus up to MAX (adjusts GEAR dice) @{shield1_bonus}",
 	"shield-bonus-max": "Record the shield's UNDAMAGED bonus. @{shield1_bonus_max}",
-	"shield-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{shield1_bonus_misc}",
-	"shield-bonus-total": "Total GEAR dice included for Parry|Shove. @{shield1_bonus_total}",
+	"shield-bonus-misc": "Miscellaneous bonus modifier (adjusts SKILL dice). @{shield1_bonus_misc}",
+	"shield-bonus-total": "Total BASE, GEAR, and SKILL dice included for Parry|Shove. @{shield1_bonus_total}",
 	"shield-u": "SHIELD",
 	"short": "Short",
 	"shove": "Shove",
@@ -254,25 +254,25 @@
 	"skill-dice": "Skill Dice",
 	"skill-level": "Skill Level",
 	"skill-u": "SKILLS",
-	"skills-list": "animal-handling, crafting, endurance, healing, insight, lore, manipulation, marksmanship, melee, might, move, performance, scouting, sleight-of-hand, stealth, survival",
+	"skills-list": "animal-handling,crafting,endurance,healing,insight,lore,manipulation,marksmanship,melee,might,move,performance,scouting,sleight-of-hand,stealth,survival",
 	"sleepy": "Sleepy",
 	"sleight-of-hand": "Sleight of Hand",
 	"spell": "Spell",
 	"spell-name": "Spell's name",
 	"spell-u": "SPELLS",
 	"stealth": "Stealth",
-	"stockpile-list": "bread, cloth, fish, flour, food, fur, glass, gold, grain, herbs, iron, iron-ore, leather, meat, silver, stone, tallow, vegetables, water, wood, wool",
+	"stockpile-list": "bread,cloth,fish,flour,food,fur,glass,gold,grain,herbs,iron,iron-ore,leather,meat,silver,stone,tallow,vegetables,water,wood,wool",
 	"stockpile-u": "STOCKPILE",
 	"stone": "Stone",
 	"strength": "Strength",
-	"strength-abbr": " [str]",
+	"strength-abbr": "Str",
 	"strength-abbr-u": "STR",
 	"stronghold": "Stronghold",
 	"stronghold-notes-u": "STRONGHOLD NOTES",
 	"stronghold-u": "STRONGHOLD",
 	"success": "Success",
 	"success-1": "1 Success",
-	"success-2": "2 Éxitos",
+	"success-2": "2 Successes",
 	"success-3": "3 Successes",
 	"success-4": "4 Successes",
 	"survival": "Survival",
@@ -293,8 +293,8 @@
 	"version-announcements": "Sheet version and announcements",
 	"water": "Water",
 	"weapon": "Weapon",
-	"weapon-bonus": "Anota la ventaja actual del arma. @{repeating_weapons_$X_weapon_bonus}",
-	"weapon-bonus-max": "Anota la ventaja del arma intacto. @{repeating_weapons_$X_weapon_bonus|max}",
+	"weapon-bonus": "Record the weapon's CURRENT bonus up to MAX (adjusts GEAR dice). @{repeating_weapons_$X_weapon_bonus}",
+	"weapon-bonus-max": "Record the weapon's UNDAMAGED bonus. @{repeating_weapons_$X_weapon_bonus_max}",
 	"weapon-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{repeating_weapons_$X_weapon_bonus_misc}",
 	"weapon-bonus-total": "Total GEAR dice included with the attack. @{repeating_weapons_$X_weapon_bonus_total}",
 	"weapon-damage": "Damage as per weapon tables. @{repeating_weapons_$X_weapon_damage}",
@@ -319,10 +319,10 @@
 	"willpower-total-abbr": "Total WP",
 	"willpower-u": "WILLPOWER",
 	"wits": "Wits",
-	"wits-abbr": " [wit]",
+	"wits-abbr": "Wit",
 	"wood": "Wood",
 	"wool": "Wool",
 	"yes": "Yes",
 	"yes-1": "Yes,-1",
-	"young-1": "Young +0"
+	"young-1": "Young"
 }
