--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -1,8 +1,8 @@
 {
-	"adult-2": "Adulte + 1",
+	"adult-2": "Adulte+1",
 	"age": "Âge",
 	"agility": "Agilité",
-	"agility-abbr": " [agi]",
+	"agility-abbr": "Agi",
 	"agility-abbr-u": "AGI",
 	"animal-handling": "Dressage",
 	"api-dice": "dé API",
@@ -97,7 +97,7 @@
 	"duration": "Durée",
 	"effects": "Effets",
 	"empathy": "Empathie",
-	"empathy-abbr": " [emp]",
+	"empathy-abbr": "Emp",
 	"encumbrance": "Encombrement",
 	"encumbrance-current-abbr": "Encombrement actuel",
 	"endurance": "Endurance",
@@ -187,7 +187,7 @@
 	"of-food": "de nourriture",
 	"of-torches": "de torches",
 	"of-water": "d'eau",
-	"old-3": "Vieux +2",
+	"old-3": "Vieux+2",
 	"old-announcements": "Vielles annonces",
 	"older": "[anciennes]",
 	"on-mount": "Sur la monture",
@@ -235,7 +235,7 @@
 	"roll-empathy": "Empathy Roll",
 	"roll-strength": "Strength Roll",
 	"roll-wits": "Wits Roll",
-	"salary": "Salaire",
+	"salary": "Salaire cuivre/jour",
 	"scouting": "Éclaireur",
 	"selected": "Sélectionné ",
 	"settings": "Paramètres",
@@ -265,7 +265,7 @@
 	"stockpile-u": "STOCKS",
 	"stone": "Pierre",
 	"strength": "Force",
-	"strength-abbr": " [for]",
+	"strength-abbr": "for",
 	"strength-abbr-u": "FOR",
 	"stronghold": "Forteresse",
 	"stronghold-notes-u": "NOTES DE FORTERESSE",
@@ -319,7 +319,7 @@
 	"willpower-total-abbr": "VOL Total",
 	"willpower-u": "VOLONTÉ",
 	"wits": "Esprit",
-	"wits-abbr": " [esp]",
+	"wits-abbr": "esp",
 	"wood": "Bois",
 	"wool": "Laine",
 	"yes": "Oui",
