--- a/Forbidden_Lands/translations/ru.json
+++ b/Forbidden_Lands/translations/ru.json
@@ -1,8 +1,8 @@
 {
-	"adult-2": "Взрослый +1",
+	"adult-2": "Взрослый+1",
 	"age": "Возраст",
 	"agility": "Проворство",
-	"agility-abbr": " [agl]",
+	"agility-abbr": "Agi",
 	"agility-abbr-u": "ПРВ",
 	"animal-handling": "Уход за животными",
 	"api-dice": "api dice",
@@ -97,7 +97,7 @@
 	"duration": "Duration",
 	"effects": "Effects",
 	"empathy": "Empathy",
-	"empathy-abbr": " [emp]",
+	"empathy-abbr": "Emp",
 	"encumbrance": "Encumbrance",
 	"encumbrance-current-abbr": "Current Encum",
 	"endurance": "Endurance",
@@ -164,7 +164,7 @@
 	"monster-attacks-u": "MONSTER ATTACKS",
 	"monster-name": "Monster's Name/Type",
 	"moun-u": "MOUNT",
-	"mount": "Mount's Gear",
+	"mount": "Mount",
 	"mounted": "Mounted",
 	"mounts-gear": "Mount's Gear",
 	"move": "Move",
@@ -190,7 +190,7 @@
 	"old-3": "Old +2",
 	"old-announcements": "Old Announcements",
 	"older": "[older]",
-	"on-mount": "On Mount",
+	"on-mount": "Gear on Mount",
 	"one-hand-abbr": "1H",
 	"other": "Other",
 	"out-of-arrows": "Out of Arrows",
@@ -235,7 +235,7 @@
 	"roll-empathy": "Empathy Roll",
 	"roll-strength": "Strength Roll",
 	"roll-wits": "Wits Roll",
-	"salary": "Salary",
+	"salary": "Salary copper/day",
 	"scouting": "Scouting",
 	"selected": "Selected",
 	"settings": "Settings",
@@ -243,8 +243,8 @@
 	"shield": "Shield",
 	"shield-bonus": "Record the shield's CURRENT bonus up to MAX (adjusts GEAR dice) @{shield1_bonus}",
 	"shield-bonus-max": "Record the shield's UNDAMAGED bonus. @{shield1_bonus_max}",
-	"shield-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{shield1_bonus_misc}",
-	"shield-bonus-total": "Total GEAR dice included for Parry|Shove. @{shield1_bonus_total}",
+	"shield-bonus-misc": "Miscellaneous bonus modifier (adjusts SKILL dice). @{shield1_bonus_misc}",
+	"shield-bonus-total": "Total BASE, GEAR, and SKILL dice included for Parry|Shove. @{shield1_bonus_total}",
 	"shield-u": "SHIELD",
 	"short": "Short",
 	"shove": "Shove",
@@ -265,7 +265,7 @@
 	"stockpile-u": "STOCKPILE",
 	"stone": "Stone",
 	"strength": "Strength",
-	"strength-abbr": " [str]",
+	"strength-abbr": "Str",
 	"strength-abbr-u": "STR",
 	"stronghold": "Stronghold",
 	"stronghold-notes-u": "STRONGHOLD NOTES",
@@ -293,8 +293,8 @@
 	"version-announcements": "Sheet version and announcements",
 	"water": "Water",
 	"weapon": "Weapon",
-	"weapon-bonus": "Record the weapon's current bonus. @{repeating_weapons_$X_weapon_bonus}",
-	"weapon-bonus-max": "Record the weapon's undamaged bonus. @{repeating_weapons_$X_weapon_bonus|max}",
+	"weapon-bonus": "Record the weapon's CURRENT bonus up to MAX (adjusts GEAR dice). @{repeating_weapons_$X_weapon_bonus}",
+	"weapon-bonus-max": "Record the weapon's UNDAMAGED bonus. @{repeating_weapons_$X_weapon_bonus_max}",
 	"weapon-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{repeating_weapons_$X_weapon_bonus_misc}",
 	"weapon-bonus-total": "Total GEAR dice included with the attack. @{repeating_weapons_$X_weapon_bonus_total}",
 	"weapon-damage": "Damage as per weapon tables. @{repeating_weapons_$X_weapon_damage}",
@@ -319,10 +319,10 @@
 	"willpower-total-abbr": "Total WP",
 	"willpower-u": "WILLPOWER",
 	"wits": "Wits",
-	"wits-abbr": " [wit]",
+	"wits-abbr": "Wit",
 	"wood": "Wood",
 	"wool": "Wool",
 	"yes": "Yes",
 	"yes-1": "Yes,-1",
-	"young-1": "Young +0"
+	"young-1": "Young"
 }
