Added "Body Modifications" (a.k.a. Cyberware) section

--- a/Fading Suns v2.75/translations/fr.json
+++ b/Fading Suns v2.75/translations/fr.json
@@ -112,8 +112,8 @@
 	"spacecraft_operations": "Exploitation des vaisseaux spatiaux",
 	"tech_redemption": "Rédemption tech",
 	"think_machine": "Machine pensante",
-	"weapons_armor_and_shield": "Armes, Armure &amp; Bouclier",
-	"weapon_name": "Arme",
+	"combat_actions": "Actions de combat",
+	"weapon_name": "Action de combat",
 	"goal_bonus_malus": "Seuil",
 	"damage": "Dégâts",
 	"strength_required": "For. min",
@@ -121,6 +121,7 @@
 	"weapon_shots": "Capa.",
 	"weapon_rate": "CdT",
 	"weapon_size": "Taille",
+	"armor_and_shield": "Armure &amp; Bouclier",
 	"armor": "Armure",
 	"tech_level": "NT",
 	"armor_prot_s": "Prot.",
@@ -129,7 +130,6 @@
 	"armor_end_malus_s": "End.",
 	"armor_init_malus_s": "Init.",
 	"armor_properties": "Propriétés",
-	"combat_actions": "Actions de combat",
 	"combat_styles": "Styles de combat",
 	"combat_style": "Style de combat",
 	"combat_action_name": "Posture/Action",
@@ -151,6 +151,9 @@
 	"rite_components_s": "Compos",
 	"rite_range": "Portée",
 	"rite_duration": "Durée",
+	"body_modifications": "Cybernétique",
+	"body_modification_type": "Implant",
+	"body_modification_incompatibility": "Incompatibilité",
 	"possessions": "Possessions",
 	"cash": "Cash",
 	"bank": "À la banque",
