KE berechnung sheetworker. option, um _max werte zu setzen aufgenommen inkl. übersetzung

--- a/Das_Schwarze_Auge_5/translations/de.json
+++ b/Das_Schwarze_Auge_5/translations/de.json
@@ -2165,5 +2165,8 @@
    "Geweihte-ist-entrückt": "Geweihte ist entrückt",
    "Mißlungen": "Mißlungen",
    "Modifikator: ": "Modifikator: ",
-   "Ritter-des-Alten-Wegs-stil": "Ritter des Alten Wegs-Stil:"
+   "Ritter-des-Alten-Wegs-stil": "Ritter des Alten Wegs-Stil:",
+   "setze-le-max":"Setze LE max für Token",
+   "setze-ae-max":"Setze AE max für Token",
+   "setze-ke-max":"Setze KE max für Token"
 }
