translated json to german

--- a/Shadowrun5thEdition/translations/de.json
+++ b/Shadowrun5thEdition/translations/de.json
@@ -5,22 +5,22 @@
     "acceleration": "Beschleunigung",
     "acid": "Säure",
     "acidprotection": "Schutz gegen Säure",
-    "actinggroup": "Acting Group",
-    "active": "Aktiv",
-    "aeronauticsmechanic": "Luftfahrt-Mechanik",
+    "actinggroup": "Schauspiel-Gruppe",
+    "active": "Aktive",
+    "aeronauticsmechanic": "Luftfahrtmechanik",
     "age": "Alter",
     "agility": "Geschicklichkeit",
     "alchemy": "Alchemie",
-    "ammo": "Munition",
-    "animalhandling": "Animal Handling",
+    "ammo": "Muni",
+    "animalhandling": "Tierführung",
     "ap": "AP",
-    "arcana": "Arcana",
+    "arcana": "Arkana",
     "archery": "Archery",
-    "armor": "Armor",
-    "armorer": "Armorer",
-    "armorrating": "Armor Rating",
-    "arms": "Arms",
-    "artisan": "Artisan",
+    "armor": "Panzerung",
+    "armorer": "Waffenbau",
+    "armorrating": "Panzerungsstufe",
+    "arms": "Waffen",
+    "artisan": "Handwerk",
     "assensing": "Askennen",
     "astralcombat": "Astralkampf",
     "astralini": "Astrale Ini",
@@ -28,12 +28,12 @@
     "athleticsgroup": "Athletik-Gruppe",
     "attack": "Angriff",
     "attribute": "Attribut",
-    "attributearray": "Attribute Array",
+    "attributearray": "Attributsanordnung",
     "attributes": "Attribute",
     "augmentations": "Verbesserungen",
     "augs": "Verb",
     "automatics": "Automatics",
-    "automotivemechanic": "Automechaniker",
+    "automotivemechanic": "Automechanik",
     "awakened": "Erwacht",
     "b": "B",
     "banishing": "Verbannen",
@@ -47,7 +47,7 @@
     "body": "Konstitution",
     "bonuses": "Boni",
     "c": "C",
-    "character": "Character",
+    "character": "Charakter",
     "charisma": "Charisma",
     "chemistry": "Chemie",
     "close": "Nah",
@@ -58,13 +58,13 @@
     "combat": "Kampf",
     "combatskill": "Kampffertigkeit",
     "combatskills": "Kampffertigkeiten",
-    "combattype": "Combat Type",
+    "combattype": "Art des Kampfes",
     "compiling": "Kompilieren",
     "complex form": "Komplexe Form",
     "composure": "Composure",
     "computer": "Computer",
-    "con": "Con",
-    "conditionfooter": "Für jeweils 3 Kästchen Schaden auf einem Track erleidet der Charakter -1 auf alle Würfelpools.",
+    "con": "Überreden",
+    "conditionfooter": "Für jeweils 3 Kästchen Schaden auf einem Monitor erleidet der Charakter -1 auf alle Würfelpools.",
     "conditionmonitor": "Zustandsmonitor",
     "conditionmonitorm": "Zustandsmonitor (M)",
     "conditionmonitormodifiers": "Zustandsmonitor-Modifikatoren (P/S): ",
@@ -76,7 +76,7 @@
     "contacts": "Kontakte",
     "copyrightfooter": "The Topps Company, Inc. has sole ownership of the names, logo, artwork, marks, photographs, sounds, audio, video and/or any proprietary material used in connection with the game Shadowrun. The Topps Company, Inc. has granted permission to use such names, logos, artwork, marks and/or any proprietary materials for promotional and informational purposes on its website but does not endorse, and is not affiliated with any official capacity whatsoever.",
     "core": "Core",
-    "corecombatinfo": "Core Combat Info",
+    "corecombatinfo": "Core Kampf-Infos",
     "counterspelling": "Antimagie",
     "crackinggroup": "Cracken-Group",
     "cybercombat": "Matrixkampf",
@@ -89,12 +89,12 @@
     "data_processing": "Datenverarbeitung",
     "dataproc": "DV",
     "decompiling": "Dekompilieren",
-    "default": "Default a skill",
+    "default": "improvisieren",
     "defense": "Verteidigung",
     "defense attribute": "Verteidigungs-Attribut",
     "defense matrix attribute": "Matrix-Verteidigungs-Attribut",
     "demolitions": "Sprengstoffe",
-    "detection": "Detection",
+    "detection": "Entdeckung",
     "device": "Gerät",
     "devicerating": "Gerätestufe",
     "dice": "Würfel",
@@ -113,22 +113,22 @@
     "electricalprotection": "Schutz gegen Elektrizität",
      "electronicsgroup": "Elektronik-Gruppe",
     "electronicwarfare": "Electronische Kriegsführung",
-    "emerged": "Emerged",
+    "emerged": "Resonant",
     "enchantinggroup": "Verzaubern-Gruppe",
     "engineeringgroup": "Mechanik-Gruppe",
-    "escapeartist": "Escape Artist",
+    "escapeartist": "Entfesseln",
     "ess": "Ess",
     "essence": "Essenz",
     "ethnicity": "Ethnie",
-    "etiquette": "Etikette",
+    "etiquette": "Gebräuche",
     "exoticmelee": "Exotische Nahkampfwaffe",
     "exoticnote": "Exotische Waffen sind nicht an Fertigkeiten gebunden. Benutz die Eingabe für Modifikatoren, um die Fertigkeitswürfel einzutragen.",
     "exoticrange": "Exotische Fernkampfwaffe",
     "extended": "Erweitert",
     "f": "F",
     "fa": "FA",
-    "fade": "Fade",
-    "fadevalue": "Fade Value",
+    "fade": "Schwund",
+    "fadevalue": "Schwund-Wert",
     "fakeid": "Gefälschte ID",
     "fakeidsrelated": "Gefälschte IDs / Dazugehörige Lebensstile / Vermögen / Lizenzen",
     "far": "Weit",
@@ -142,12 +142,12 @@
     "flight": "Flight",
     "forgery": "Fälschung",
     "freefall": "Freier Fall",
-    "funds": "Vermögen",
+    "funds": "Geld",
     "gear": "Ausrüstung",
     "gm": "an den Spielleiter",
     "gm-whisper": "Wurf an den Spielleiter flüstern,
     "/w GM": "/w GM",
-    "grunt": "Grunt",
+    "grunt": "Gegner",
     "gunnery": "Geschütze",
     "gymnastics": "Akrobatik",
     "hacking": "Hacken",
@@ -167,7 +167,7 @@
     "illusion": "Illusion",
     "impersonation": "Verkörpern",
     "indirect": "Indirekt",
-    "industrialmechanic": "Industrie-Mechanik",
+    "industrialmechanic": "Industriemechanik",
     "influencegroup": "Einfluss-Group",
     "initiate": "Initiat",
     "initiative": "Initiative",
@@ -178,12 +178,12 @@
     "intrusioncountermeasures": "Intrusion Countermeasures (Gegenmaßnahmen)",
     "intuition": "Intuition",
     "item": "Gegenstand",
-    "judgeintentions": "Intentionen erkennen",
+    "judgeintentions": "Menschenkenntnis",
     "karma": "Karma",
-    "know": "Know..",
+    "know": "Wissens-",
     "knowledgeskills": "Wissensfertigkeiten",
     "l": "L",
-    "lang": "Lang..",
+    "lang": "Sprach-",
     "languageskills": "Sprachfertigkeiten",
     "leadership": "Führung",
     "level": "Stufe",
@@ -193,7 +193,7 @@
     "limits": "Limits",
     "locksmith": "Schlosser",
     "logic": "Logik",
-    "longarms": "Langwaffen",
+    "longarms": "Gewehre",
     "los": "LOS",
     "los (a)": "LOS (A)",
     "loyalty": "Loyalität",
@@ -209,7 +209,7 @@
     "matrixdevice": "Matrixgerät",
     "matrixinit": "Matrix-Ini",
     "matrixinitiative": "Matrix-Initiative",
-    "matrixsoak": "Matrix Soak",
+    "matrixsoak": "Matrix-Schadenswiderstand",
     "medicine": "Medizin",
     "melee": "Nahkampf",
     "memory": "Erinnerung",
@@ -218,9 +218,9 @@
     "mentallimit": "Geistiges Limit:",
     "metamagic": "Metamagie",
     "metatype": "Metatypus",
-    "misc": "versch",
+    "misc": "verschiedene",
     "mode": "Modus",
-    "model": "Model",
+    "model": "Modell",
     "modeoptions": "Modus-Optionen",
     "modes": "Modi",
     "modifications": "Modifikationen",
@@ -232,7 +232,7 @@
     "n": "N",
     "name": "Name",
     "namealias": "NAME/PRIMÄRER ALIAS",
-    "nauticalmechanic": "Seefahrts-Mechanik",
+    "nauticalmechanic": "Seefahrtmechanik",
     "navigation": "Navigation",
     "near": "Nah",
     "negotiation": "Verhandlung",
@@ -250,8 +250,8 @@
     "low pain tolerance": "Niedrige Schmerztoleranz",
     "damage compensators": "Damage Compensators (P/S): ",
     "paintolerance": "Schmerztoleranz",
-    "palming": "Palming",
-    "pc": "PC",
+    "palming": "Fingerfertigkeit",
+    "pc": "SC",
     "perception": "Wahrnehmung",
     "performance": "Vorführung",
     "permanent": "Permanent",
@@ -295,15 +295,15 @@
     "range": "Reichweite",
     "ranged": "Fernkampf",
     "rating": "Stufe",
-    "ratingmodifier": "Rating Modifier",
-    "rc": "RC",
+    "ratingmodifier": "Stufen-Modifikator",
+    "rc": "RK",
     "reach": "Reichweite",
     "reaction": "Reaktion",
     "recoil": "Rückstoß",
     "registering": "Registrierung",
-    "relatedlifestyle": "Dazugehöriger Lifestyles",
+    "relatedlifestyle": "Dazugehöriger Lebensstil",
     "resonance": "Resonanz",
-    "resonanceskills": "Resonance-Fertigkeiten",
+    "resonanceskills": "Resonanzfertigkeiten",
     "rituals": "Rituale",
     "ritualspellcasting": "Ritualzauberei",
     "rtg": "RTG",
@@ -320,9 +320,9 @@
     "sheettype": "Bogentyp",
     "skill": "Fertigkeit",
     "skills": "Fertigkeiten",
-    "sleaze": "Sleaze",
-    "sneaking": "Sneaking",
-    "soak": "Soak",
+    "sleaze": "Schleicher",
+    "sneaking": "Schleichen",
+    "soak": "Schadenswiderstand",
     "social": "Sozial",
     "social_limit": "Soziales Limit",
     "sociallimit": "Soziales Limit: ",
@@ -332,9 +332,9 @@
     "sorcerygroup": "Hexerei-Gruppe",
     "special": "Special",
     "specialization": "Spezialisierung",
-    "speed": "Speed",
-    "speedoff": "Speed (Off)",
-    "spellcasting": "Zaubern",
+    "speed": "Geschwindigkeit",
+    "speedoff": "Geschwindigkeit (Off)",
+    "spellcasting": "Spruchzauberei",
     "category": "Kategorie",
     "spells": "Zauber",
     "sprite": "Sprite",
@@ -346,8 +346,8 @@
     "stunbonus": "Betäubungsbonus",
     "stundamagetrack": "Betäubungsschaden",
     "style": "Stil",
-    "submersion": "Submersion",
-    "summoning": "Beschwören",
+    "submersion": "Wandlung",
+    "summoning": "Herbeirufen",
     "survival": "Überleben",
     "sustained": "Aufrechterhalten",
     "swimming": "Schwimmen",
@@ -359,22 +359,22 @@
     "technique": "Technik",
     "temp": "temp",
     "temporarymodifiers": "Vorrübergehende Modifikatoren",
-    "throwingweapons": "Throwing Weapons",
+    "throwingweapons": "Wurfwaffen",
     "topps": "The Topps Company, Inc. has sole ownership of the names, logo, artwork, marks, photographs, sounds, audio, video and/or any proprietary material used in connection with the game Shadowrun. The Topps Company, Inc. has granted permission to use such names, logos, artwork, marks and/or any proprietary materials for promotional and informational purposes on its website but does not endorse, and is not affiliated with any official capacity whatsoever.",
     "total": "Gesamt",
     "totalkarma": "Gesamt-Karma",
-    "tracking": "Tracking",
+    "tracking": "Spurenlesen",
     "type": "Typ",
-    "unarmedcombat": "Unbewaffneter Kampf",
+    "unarmedcombat": "Waffenloser Kampf",
     "vehicle": "Fahrzeug",
-    "vehicleskills": "Fahrzeug-Fertigkeiten",
+    "vehicleskills": "Fahrzeugfertigkeiten",
     "vehicleweapons": "Fahrzeugwaffen",
     "w": "W",
     "weakness": "Schwäche",
     "weapon": "Waffe",
     "weapons": "Waffen",
     "weight": "Gewicht",
-    "whisper": "Whisper",
+    "whisper": "Flüstern",
     "whisperdescription": "Standardeinstellung für Würfe, öffentlich oder nur an den Spielleiter.",
     "willpower": "Willenskraft",
     "wounds": "Wunden",
@@ -393,7 +393,7 @@
     "movement modifier": "Bewegungs-Modifikator",
     "preperations": "Vorbereitungen",
     "force": "Kraftstufe",
-    "potency": "potency",
+    "potency": "Wirksamkeit",
     "trigger": "Auslöser",
     "command": "Kommando",
     "contact": "Kontakt",
