typo in initiative roll query (+2 Def => -2 Def)

--- a/Fading Suns v2.75/translations/fr.json
+++ b/Fading Suns v2.75/translations/fr.json
@@ -28,10 +28,10 @@
 	"initiative": "Initiative",
 	"stance": "Posture",
 	"stance_neutral": "Neutre (défaut)",
-	"stance_aggressive_atk": "Attaque: +4 aux seuils de réussite de chaque attaque; +2 en Déf.",
-	"stance_aggressive_dmg": "Attaque: +2d de dégâts de chaque attaque; +2 en Déf.",
-	"stance_defensive": "Défense: -4 aux seuils de réussite; +2 en Déf.",
-	"stance_full_defense": "Défense totale: déplacement uniquement; +4 en Déf.",
+	"stance_aggressive_atk": "Attaque: +4 aux seuils de réussite de chaque attaque; -2 en Défense",
+	"stance_aggressive_dmg": "Attaque: +2d aux dégâts de chaque attaque; -2 en Défense",
+	"stance_defensive": "Défense: -4 aux seuils de réussite; +2 en Défense",
+	"stance_full_defense": "Défense totale: déplacement uniquement; +4 en Défense",
 	"body": "Corps",
 	"strength": "Force",
 	"dexterity": "Dextérité",
