tried to resolve merge conflicts

--- a/Shadowrun5thEdition/translations/de.json
+++ b/Shadowrun5thEdition/translations/de.json
@@ -145,7 +145,7 @@
     "funds": "Geld",
     "gear": "Ausrüstung",
     "gm": "an den Spielleiter",
-    "gm-whisper": "Wurf an den Spielleiter flüstern,
+    "gm-whisper": "Wurf an den Spielleiter flüstern",
     "/w GM": "/w GM",
     "grunt": "Gegner",
     "gunnery": "Geschütze",
