tried to resolve merge conflicts

--- a/Shadowrun5thEdition/translations/de.json
+++ b/Shadowrun5thEdition/translations/de.json
@@ -383,7 +383,7 @@
     "back": "Zurück",
     "import": "Import",
     "importer": "Importmodul",
-    "importecharacter": "Character importieren",
+    "importecharacter": "Charakter importieren",
     "apply": "Anwenden",
     "importertext": "Charaktere können via JSON von Chummer importiert werden. Der Besitzer des Spiels muss in den Spieleinstellungen ein Kompendium setzen. Es ist dabei egal, welches ausgewählt wird. Charactermancer verlangt lediglich, daß eines ausgewählt wurde.",
     "character name": "Charakter-Name",
@@ -399,5 +399,29 @@
     "contact": "Kontakt",
     "time": "Zeit",
     "adeptpowers": "Adeptenkräfte oder andere Fähigkeiten",
-    "whisper rolls to gm": "whisper rolls to gm"
+    "whisper rolls to gm": "Wurf an den Spielleiter flüstern",
+    "handling base": "Handling Basis",
+    "handling temp": "Handling Temp",
+    "handling modifier": "Handling-Modifikator",
+    "vehicle name": "Fahrzeugname",
+    "acceleration base": "Beschleunigung Basis",
+    "acceleration temp": "Beschleunigung Temp",
+    "acceleration modifier": "Beschleunigungs-Modifikator",
+    "speed base": "Geschwindigkeit Basis",
+    "speed temp": "Geschwindigkeit Temp",
+    "speed modifier": "Geschwindigkeits-Modifikator",
+    "pilot base": "Pilot Basis",
+    "pilot temp": "Pilot Temp",
+    "pilot modifier": "Pilot-Modifikator",
+    "body base": "Rumpf Basis",
+    "body temp": "Rumpf Temp",
+    "body modifier": "Rumpf-Modifikator",
+    "armor base": "Panzerung Basis",
+    "armor temp": "Panzerung Temp",
+    "armor modifier": "Panzerungsmodifikator",
+    "sensor base": "Sensor Basis",
+    "sensor temp": "Sensor Temp",
+    "sensor modifier": "Sensor-Modifikator",
+    "handling_off": "Handling (Off-Road)",
+    "mod": "mod"
 }
