--- a/Forbidden_Lands/translations/sv.json
+++ b/Forbidden_Lands/translations/sv.json
@@ -61,7 +61,7 @@
 	"condition-thirsty": "Varje dag måste du dricka minst en ranson vatten. Efter ett dygn utan vätska blir du UTTORKAD.  @{thirsty}",
 	"condition-u": "TILLSTÅND",
 	"consumable": "Förbrukningsvara",
-	"consumable-note": "**OBS** Du måste manuellt reducera resustärningen om du slår en etta.",
+	"consumable-note": "**OBS** Du måste manuellt reducera resustärningen om du slår 1 eller 2.",
 	"consumable-u": "FÖRBRUKNINGSVAROR",
 	"copper": "Koppar",
 	"crafting": "Hantverk",
