rework moves into talents

--- a/WorldOfLies/translations/fr.json
+++ b/WorldOfLies/translations/fr.json
@@ -24,7 +24,7 @@
 	"config": "Configuration",
 	"damage": "Dégâts",
 	"playbook-archetype": "Archétype",
-	"playbook-moves": "Mouvements du PlayBook",
+	"talents": "Talents",
 	"complications": "Complications",
 	"raison": "Raison",
 	"crew-contacts": "Équipe/Contacts",
@@ -114,7 +114,7 @@
 	"marine": "Landfall Marine",
 	"massive": "Massif",
 	"misses": "Échec",
-	"move": "Action",
+	"talent": "Talent",
 	"name": "Nom",
 	"news": "Nouvelles",
 	"no-vuln-hunger": "Tu n'es plus vulnérable à la faim",
@@ -130,6 +130,7 @@
 	"puppet-strings": "Marionnettes",
 	"quarantine": "Réserviste",
 	"agir-avec-calme": "Faire le point ; interpréter le comprotement d'un individu",
+    "agir-avec-charisme": "Agir avec charisme",
 	"regulars": "Habitués",
 	"remaining-stasis": "Reste en Stase",
 	"resolve-interest-establishment": "Résoud un intérêt de ton établissement",
