add speciality, clock for tensions and World of Lies specific roles.

--- a/WorldOfLies/translations/fr.json
+++ b/WorldOfLies/translations/fr.json
@@ -5,14 +5,22 @@
 	"agility": "Agilité",
 	"amenities": "Aménagements",
 	"ammo": "Munitions",
+	"bonus-talent": "Talent ?",
 	"angel": "Ange Gardien",
+	"récupérer": "Récupérer",
 	"armor": "Armure",
 	"atmosphere": "Atmosphère",
 	"attractions": "Attraits",
+	"résister": "Résister",
 	"back-minus-harm": "Reviens avec -1dur",
 	"back-minus-weird": "Reviens avec +1zarb",
 	"barter": "Troc",
+	"self_control": "Self-control",
+	"manipuler": "Manipuler",
+	"contacter": "Contacter",
+	"tension": "Tensions",
 	"battlebabe": "Beauté Fatale",
+	"état-de-santé": "Etat de santé",
 	"brainer": "Troc",
 	"but": "Mais",
 	"change-char-type": "Changer le type de son perso",
@@ -47,9 +55,13 @@
 	"force entrance_exit": "Entrée/Sortie par la force",
 	"fortune": "Chance",
 	"frame": "Châssis",
+	"specialities": "Spécialités",
 	"gang": "Gang",
+    "soigner": "Soigner",
+    "analyser": "Analyser",
 	"gang-new-option": "Une nouvelle option pour ton gang",
-	"gear-barter": "Matos & Troc",
+	"gear": "Matos",
+	"speciality": "Specialité",
 	"get-2brainer-gear": "Deux matos de Céphale, nouveau ou remplacement (tu choisis)",
 	"get-ally": "Un allié (voir le MC pour les détails)",
 	"get-establishment": "Un établissement (précise)",
@@ -89,13 +101,13 @@
 	"get-vehicle-new": "Un nouveau véhicule (précise)",
 	"get-workspace-2options": "Un atelier (détail) ou ajoute 2 options à ton atelier",
 	"gigs": "Jobs",
-	"agir-avec-force": "Agir avec force",
+	"disparaitre": "Disparaitre",
+	"risque": "Prendre un risque",
 	"gunlugger": "Chien de guerre",
 	"hard_shutdown/cover_ground": "hard shutdown/cover ground",
 	"action": "Action",
 	"hardholder": "Taulier",
 	"harm": "Dégâts",
-	"highlighted": "Coché",
 	"hocus": "Prophète",
 	"hold": "Je retiens..",
 	"holding": "Domaine",
@@ -123,14 +135,31 @@
 	"open-your-brain": "Ouvrir son cerveau",
 	"other": "Autre",
 	"other-moves": "Autres Actions",
+	"armes-à-feu": "armes-à-feu",
+	"corps-à-corps": "corps-à-corps",
+	"conduite": "conduite",
+	"démolition": "démolition",
+	"espionnage": "espionnage",
+	"filatures": "filatures",
+	"informatique": "informatique",
+	"interrogatoire": "interrogatoire",
+	"investigation": "investigation",
+	"persuasion": "persuasion",
+	"médecine": "médecine",
+	"navigation": "navigation",
+	"occultisme": "occultisme",
+	"pistage": "pistage",
+	"pilotage": "pilotage",
+	"psychologie": "psychologie",
+	"sciences": "sciences",
 	"penalties": "Pénalités",
 	"people-connections": "Personnes avec des connexions",
 	"phase1-add-improvements": "Ajoute ces progressions manuellement aux Caracs, elles ne seront pas calculées automatiquement.",
 	"power": "Puissance",
 	"puppet-strings": "Marionnettes",
 	"quarantine": "Réserviste",
-	"agir-avec-calme": "Faire le point ; interpréter le comprotement d'un individu",
-    "agir-avec-charisme": "Agir avec charisme",
+	"agir-avec-calme": "Agir avec calme",
+	"agir-avec-charisme": "Agir avec charisme",
 	"regulars": "Habitués",
 	"remaining-stasis": "Reste en Stase",
 	"resolve-interest-establishment": "Résoud un intérêt de ton établissement",
@@ -140,7 +169,6 @@
 	"savvyhead": "Machiniste",
 	"second-char": "Créer un 2ème perso à jouer",
 	"security": "Sécurité",
-	"agir-avec-calme": "Agir avec calme",
 	"influence": "Influence",
 	"show-hide-improvements": "Masquer les Progressions",
 	"size": "Taille",
