--- a/Chronicles of Darkness by Roll20/translations/en.json
+++ b/Chronicles of Darkness by Roll20/translations/en.json
@@ -16,6 +16,8 @@
     "second-edition": "2nd Edition",
     "demon-the-descent": "Demon the Descent",
     "beast-the-primordial": "Beast the Primordial",
+    "organization": "Organization",
+    "sin-eater-krewe": "Sin-Eater Krewe",
     "dice-roller-u": "DICE ROLLER",
     "roll-initiative": "Roll Initiative",
     "sheet-roll": "Sheet Roll",
@@ -88,6 +90,7 @@
     "agenda": "Agenda:",
     "hunger": "Hunger:",
     "compact": "Compact/Conspiracy:",
+    "category": "Category:",
     "cronicle": "Chronicle:",
     "concept": "Concept:",
     "group-name": "Group Name:",
@@ -101,6 +104,8 @@
     "judge": "Judge:",
     "catalyst": "Catalyst:",
     "horror": "Horror",
+    "creed": "Creed:",
+    "doctrine": "Doctrine:",
     "attributes-u": "ATTRIBUTES",
     "power": "Power",
     "intelligence": "Intelligence",
@@ -327,5 +332,13 @@
     "and-hits-for": "and hits for",
     "makes-a": "makes a",
     "attack": "attack",
-    "unarmed": "Unarmed"
-}
+    "unarmed": "Unarmed",
+    "ceremonies": "Ceremonies",
+    "members": "Members",
+    "regalia": "Regalia",
+    "membership": "Membership",
+    "congregation": "Congregation",
+    "standing": "Standing",
+    "esotery": "Esotery"
+   }
+   
