--- a/Das_Schwarze_Auge_5/translations/en.json
+++ b/Das_Schwarze_Auge_5/translations/en.json
@@ -2165,8 +2165,5 @@
    "Geweihte-ist-entrückt": "The Blessed One receives 4 levels of Rapture",
    "Mißlungen": "Fail",
    "Modifikator: ": "Modifier: ",
-   "Ritter-des-Alten-Wegs-stil": "Ritter des Alten Wegs-Stil:",
-   "setze-le-max":"Set LE max for Token",
-   "setze-ae-max":"Set AE max for Token",
-   "setze-ke-max":"Set KE max for Token"
+   "Ritter-des-Alten-Wegs-stil": "Ritter des Alten Wegs-Stil:"
 }
