--- a/Das_Schwarze_Auge_5/translations/en.json
+++ b/Das_Schwarze_Auge_5/translations/en.json
@@ -1459,11 +1459,11 @@ Opponents can react to this attack individually. Your first  attack  suffers  a 
    "Wirkungsdauer": "Duration",
    "ZK": "TOU",
    "Merkmal": "Property",
-   "Abkühlung": "Abkühlung",
+   "Abkühlung": "Cool down",
    "Berührung": "Touch",
    "sofort": "instant",
    "Objekt": "Object",
-   "Aranische-Rasur": "Aranische Rasur",
+   "Aranische-Rasur": "Aranian Close Shave",
    "Kulturschaffende": "Kulturschaffende",
    "Verwandlung": "Transformation",
    "8-Schritt": "8 Yard",
@@ -1473,7 +1473,7 @@ Opponents can react to this attack individually. Your first  attack  suffers  a 
    "Beruhigung": "Pacify",
    "1-Stunde": "1 Hour",
    "Heilung": "Healing",
-   "Blütenduft": "Blütenduft",
+   "Blütenduft": "Fragrance",
    "selbst": "self",
    "1-Minute": "1 Minute",
    "Duft": "Duft",
@@ -1481,40 +1481,40 @@ Opponents can react to this attack individually. Your first  attack  suffers  a 
    "Ehrfürchtiges-Verhalten": "Reverent Attitude",
    "30-Sekunden": "30 seconds",
    "Einfluss": "Influence",
-   "Feenfüße": "Feenfüße",
+   "Feenfüße": "Fairy Feet",
    "16-Schritt": "16 yards",
    "Objekte": "Objects",
    "Telekinese": "Telekinesis",
    "Feuerfinger": "Firefinger",
-   "Glücksgriff": "Glücksgriff",
+   "Glücksgriff": "Lucky Fingers",
    "Hellsicht": "Clairvoyance",
    "Grußworte": " Words of Welcome",
    "Guten-Morgen": "Good morning",
    "4-Schritt": "4 yards",
    "Haarpracht": "Magnificent Head of Hair",
-   "Handwärmer": "Handwärmer",
+   "Handwärmer": "Hand warmer",
    "Heller-Stern": "Shining Star",
    "5-Sekunden": "5 seconds",
-   "Hintergrundmusik": "Hintergrundmusik",
-   "Insektenbann": "Insektenbann",
+   "Hintergrundmusik": "Background Music",
+   "Insektenbann": "Banish Insects",
    "6-Stunden": "6 hours",
-   "Lockruf": "Lockruf",
+   "Lockruf": "Siren Call",
    "Tiere": "Animals",
    "Luftstoß": "Air Blast",
    "Nagellack": "Nail Polish",
    "Ordentlich": "Neat",
-   "Regenbogenaugen": "Regenbogenaugen",
+   "Regenbogenaugen": "Rainbow Eyes",
    "Rohrstock": "Cane",
-   "Sandfigur": "Sandfigur",
+   "Sandfigur": "Sand Figure",
    "1-Schritt": "1 yard",
-   "Schlangenhände": "Schlangenhände",
+   "Schlangenhände": "Serpent Hands",
    "Schminken": "Makeup",
-   "Schnipsen": "Schnipsen",
+   "Schnipsen": "Snap",
    "Objekt-und-Wesen": "Objekt und Wesen",
    "Selbstarchivierung": "Self-archiving",
    "Signatur": "Signature",
-   "Tätowierung": "Tätowierung",
-   "Trocken": "Trocken",
+   "Tätowierung": "Tattoo",
+   "Trocken": "Stay Dry",
    "Objekt-und-Kulturschaffende": "Objekt und Kulturschaffende",
    "Unheimliches-Lachen": "Eerie Laughter",
    "Wasserhöhe": "Water Level",
