--- a/WorldOfLies/translations/fr.json
+++ b/WorldOfLies/translations/fr.json
@@ -1,209 +1,45 @@
 {
-	"add-workspace-2options": "Ajoute 2 options à ton atelier",
-	"advance-3basicmoves": "Avancer 3 Actions de base",
-	"advance-3other-moves": "Avancer les 3 autres Actions de base",
-	"agility": "Agilité",
-	"amenities": "Aménagements",
-	"ammo": "Munitions",
-	"bonus-talent": "Talent ?",
-	"angel": "Ange Gardien",
-	"récupérer": "Récupérer",
-	"armor": "Armure",
-	"atmosphere": "Atmosphère",
-	"attractions": "Attraits",
-	"résister": "Résister",
-	"back-minus-harm": "Reviens avec -1dur",
-	"back-minus-weird": "Reviens avec +1zarb",
-	"barter": "Troc",
-	"self_control": "Self-control",
-	"manipuler": "Manipuler",
-	"contacter": "Contacter",
-	"tension": "Tensions",
-	"battlebabe": "Beauté Fatale",
-	"état-de-santé": "Etat de santé",
-	"brainer": "Troc",
-	"but": "Mais",
-	"change-char-type": "Changer le type de son perso",
-	"change-playbook": "Change de livret",
-	"charge": "Charge",
-	"child-thing": "Enfant-chose",
-	"chopper": "Biker",
-	"chosen-friends": "Amis choisis",
-	"config": "Configuration",
-	"damage": "Dégâts",
-	"playbook-archetype": "Archétype",
-	"talents": "Talents",
-	"complications": "Complications",
-	"raison": "Raison",
-	"crew-contacts": "Équipe/Contacts",
-	"custom-weapons": "Armes sur mesure",
-	"description": "Description ",
-	"die": "Meurs",
-	"agir-avec-raison": "Agir avec raison",
-	"driver": "Passeur",
-	"emerged-stasis": "Tu émerges de Stase",
-	"erase-holding-option": "Efface une option de domaine",
-	"establishment": "Établissement",
-	"establishment-security": "Ajoute une sécurité pour ton établissement",
-	"experience": "Expérience",
-	"faceless": "Sans-Visage",
-	"features": "Traits",
-	"follower_barter": "Suivant marchandeur",
-	"followers": "Disciples",
-	"followers-newoption": "Une nouvelle option pour tes disciples",
-	"food": "Nourriture",
-	"force entrance_exit": "Entrée/Sortie par la force",
-	"fortune": "Chance",
-	"frame": "Châssis",
-	"specialities": "Spécialités",
-	"gang": "Gang",
-    "soigner": "Soigner",
-    "analyser": "Analyser",
-	"gang-new-option": "Une nouvelle option pour ton gang",
-	"gear": "Matos",
-	"speciality": "Specialité",
-	"get-2brainer-gear": "Deux matos de Céphale, nouveau ou remplacement (tu choisis)",
-	"get-ally": "Un allié (voir le MC pour les détails)",
-	"get-establishment": "Un établissement (précise)",
-	"get-followers-fortune": "Des disciples (précise) et Offrande",
-	"get-gang-alpha": "Un gang (précise) et Mâle Alpha",
-	"get-gang-leadership": "Un gang (précise) et Commandement",
-	"get-gang-security-leadership": "Un gang (précise) pour assurer la sécurité et Commandement",
-	"get-garage-crew": "Un garage (atelier, précise) et une équipe",
-	"get-holding-newoption": "Une nouvelle option pour ton domaine",
-	"get-holding-wealth": "Un domaine (précise) et Richesse",
-	"get-move-angel": "Une nouvelle Action d'Ange-Gardien",
-	"get-move-battlebabe": "Une nouvelle Action de Beauté Fatale",
-	"get-move-brainer": "Une nouvelle Action de Céphale",
-	"get-move-child": "Une nouvelle Action de child-thing",
-	"get-move-driver": "Une nouvelle Action de Passeur",
-	"get-move-faceless": "Une nouvelle Action de Sans-Visage",
-	"get-move-gunlugger": "Une nouvelle Action de Chien de guerre",
-	"get-move-hocus": "Une nouvelle Action de Prophète",
-	"get-move-maestro": "Une nouvelle Action de Maître Chef",
-	"get-move-news": "Une nouvelle Action de News",
-	"get-move-other": "Une nouvelle Action d'un autre livret",
-	"get-move-savvyhead": "Une nouvelle Action de Machiniste",
-	"get-move-skinner": "Une nouvelle Action de Envoûteur",
-	"get-move-waterbearer": "Une nouvelle Action de waterbearer move",
-	"get-plus-raison-max2": "+1 Raison (max Raison +2)",
-	"get-plus-raison-max3": "+1 Raison (max Raison +3)",
-	"get-plus-action-max2": "+1 Action (max Action +2)",
-	"get-plus-action-max3": "+1 Action (max Dur +3)",
-	"get-plus-nerfs-max2": "+1 Nerfs (max Nerfs +2)",
-	"get-plus-nerfs-max3": "+1 Nerfs (max Nerfs +3)",
-	"get-plus-influence-max2": "+1 Influence (max Influence +2)",
-	"get-plus-influence-max3": "+1 Influence (max Influence +3)",
-	"get-plus-stat-max3": "+1 à une Carac (max Carac +3)",
-	"get-supplier": "Trouve-toi un fournisseur (cf les détails avec le MC)",
-	"get-vehicle": "Un nouveau véhicule (précise)",
-	"get-vehicle-combat-driver": "Un véhicule (précise) et pilote de guerre",
-	"get-vehicle-new": "Un nouveau véhicule (précise)",
-	"get-workspace-2options": "Un atelier (détail) ou ajoute 2 options à ton atelier",
-	"gigs": "Jobs",
-	"disparaitre": "Disparaitre",
-	"risque": "Prendre un risque",
-	"gunlugger": "Chien de guerre",
-	"hard_shutdown/cover_ground": "hard shutdown/cover ground",
-	"action": "Action",
-	"hardholder": "Taulier",
-	"harm": "Dégâts",
-	"hocus": "Prophète",
-	"hold": "Je retiens..",
-	"holding": "Domaine",
-	"holding-size": "Population",
-	"nerfs": "Nerfs",
-	"hx": "Hx",
-	"hx-notes": "Notes de Hx",
-	"improvements": "Progressions",
-	"interested-parties": "Parties intéressées",
-	"laws": "Lois",
-	"life-untenable": "Quand la vie devient invivable",
-	"lock-unlock-playbook": "Bloquer/Débloquer l'archétype",
-	"look": "Apparence",
-	"looks": "Apparence",
-	"maestro-d": "Maître Chef",
-	"marine": "Landfall Marine",
-	"massive": "Massif",
-	"misses": "Échec",
-	"talent": "Talent",
-	"name": "Nom",
-	"news": "Nouvelles",
-	"no-vuln-hunger": "Tu n'es plus vulnérable à la faim",
-	"no-vuln-phychic": "tu n'es plus vulnérable aux dégâts Ψ",
-	"no-vuln-isolation": "you're no longer vulnerable to reflexive isolation",
-	"open-your-brain": "Ouvrir son cerveau",
-	"other": "Autre",
-	"other-moves": "Autres Actions",
-	"armes-à-feu": "armes-à-feu",
-	"corps-à-corps": "corps-à-corps",
-	"conduite": "conduite",
-	"démolition": "démolition",
-	"espionnage": "espionnage",
-	"filatures": "filatures",
-	"informatique": "informatique",
-	"interrogatoire": "interrogatoire",
-	"investigation": "investigation",
-	"persuasion": "persuasion",
-	"médecine": "médecine",
-	"navigation": "navigation",
-	"occultisme": "occultisme",
-	"pistage": "pistage",
-	"pilotage": "pilotage",
-	"psychologie": "psychologie",
-	"sciences": "sciences",
-	"penalties": "Pénalités",
-	"people-connections": "Personnes avec des connexions",
-	"phase1-add-improvements": "Ajoute ces progressions manuellement aux Caracs, elles ne seront pas calculées automatiquement.",
-	"power": "Puissance",
-	"puppet-strings": "Marionnettes",
-	"quarantine": "Réserviste",
-	"agir-avec-calme": "Agir avec calme",
-	"agir-avec-charisme": "Agir avec charisme",
-	"regulars": "Habitués",
-	"remaining-stasis": "Reste en Stase",
-	"resolve-interest-establishment": "Résoud un intérêt de ton établissement",
-	"retire-char-safety": "Mettre son perso à la retraite",
-	"roll-your-hx": "lancer votre Hx",
-	"rolls": "lance",
-	"savvyhead": "Machiniste",
-	"second-char": "Créer un 2ème perso à jouer",
-	"security": "Sécurité",
-	"influence": "Influence",
-	"show-hide-improvements": "Masquer les Progressions",
-	"size": "Taille",
-	"skinner": "Envoûteur",
-	"source": "Source",
-	"source-2features": "Ajoute 2 Traits à ta source",
-	"source-laws": "Change les Lois et Pénalités de la source",
-	"specialist-jackson": "Statut de spécialiste Jackson, Tammy M.",
-	"spend_1_barter_to_replenish_1_stock": "Dépenser 1 Troc pour reconstituer 1 Stock",
-	"stasis": "Stase",
-	"stasis-facilities": "Installations de Stase",
-	"stat": "Carac",
-	"stats": "Caracs",
-	"stock": "Réserves",
-	"strength": "Points forts",
-	"studio": "Studio",
-	"succeeds": "Succès",
-	"succeeds-partially": "Succès partiel",
-	"suffer-harm": "subir un préjudice",
-	"surplus": "Surplus",
-	"tags": "Marqueurs",
-	"under-disguises": "Sous leurs déguisements",
-	"unlock-stasis-facility": "Une nouvelle option de stase",
-	"unlocked-facilities": "Installations ouvertes",
-	"unmasked": "Démasqué, tu es",
-	"untouched-why": "C'est intact. Pourquoi ?",
-	"walkingSuit": "Walking Suit",
-	"want": "Besoins",
-	"waterbearer": "Porteur d'eau",
-	"weaknesses": "Points faibles",
-	"weird": "Zarb",
-	"wolves-maelstrom": "Loups du maelström",
-	"workspace-lifesupport": "Ajoute une unité de soins intensifs à ton atelier pour bosser sur des gens",
-	"your-bike": "Ta Bécane",
-	"your-cars": "Bagnole(s)",
-	"your-den": "Ta  Antre",
-	"your-mask": "Ton Masque"
+   "stats":"Caracs",
+   "raison":"Raison",
+   "bonus-talent":"Talent ?",
+   "analyser":"Analyser",
+   "soigner":"Soigner",
+   "action":"Action",
+   "risque":"Prendre un risque",
+   "disparaitre":"Disparaitre",
+   "nerfs":"Nerfs",
+   "self_control":"Disparaitre",
+   "résister":"Résister",
+   "récupérer":"Récupérer",
+   "influence":"Influence",
+   "contacter":"Contacter",
+   "manipuler":"Manipuler",
+   "specialities":"Spécialités",
+   "speciality":"Specialité",
+   "part-ombre":"Part d'Ombre",
+   "talents":"Talents",
+   "armes-à-feu":"Armes à feu",
+   "corps-à-corps":"Corps à corps",
+   "conduite":"Conduite",
+   "démolition":"Démolition",
+   "espionnage":"Espionnage",
+   "filatures":"Filatures",
+   "informatique":"Informatique",
+   "interrogatoire":"Interrogatoire",
+   "investigation":"Investigation",
+   "persuasion":"Persuasion",
+   "médecine":"Médecine",
+   "navigation":"Navigation",
+   "occultisme":"Occultisme",
+   "pistage":"Pistage",
+   "pilotage":"Pilotage",
+   "psychologie":"Psychologie",
+   "sciences":"Sciences",
+   "talent":"Talent",
+   "état-de-santé":"Etat de Santé",
+   "tension":"Tension",
+   "gear":"Matos",
+   "succeeds":"Succès",
+   "misses":"Échec",
+   "succeeds-partially":"Succès partiel"
 }
