Fix some broken roll_names

--- a/WorldOfLies/translations/fr.json
+++ b/WorldOfLies/translations/fr.json
@@ -8,7 +8,7 @@
    "risque":"Prendre un risque",
    "disparaitre":"Disparaitre",
    "nerfs":"Nerfs",
-   "self_control":"Disparaitre",
+   "self_control":"Self control",
    "résister":"Résister",
    "récupérer":"Récupérer",
    "influence":"Influence",
