--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -53,7 +53,6 @@
     "brillant": "Brillant (1700 AP)",
     "charakteristika": "Characteristics",
     "charisma": "Charisma",
-    "d6": "D6+",
     "dauer": "Duration",
     "diskus": "Disk",
     "diskusse": "Disks",
@@ -655,5 +654,41 @@
     "PA": "PA",
     "TP": "DP",
     "FK": "RC",
-    "rucksack": "Backpack"
+    "rucksack": "Backpack",
+    "allgemein": "Sheet Settings",
+    "header-anzeigen": "Display Header: ",
+    "an": "on",
+    "aus": "off",
+    "eigenschaften-aus": "Attributes off",
+    "attribute-aus": "Base Values off",
+    "npc-bogen": " activate NPC Sheet: ",
+    "show-le": "Show Life Points ",
+    "show-ae": "Show Arcane Energy: ",
+    "show-ke": "Show Karma Points: ",
+    "typus": "Type",
+    "gkategorie": "Size Category",
+    "schwierigkeit": "Summoning Difficulty",
+    "beute": "Loot",
+    "kampfverhalten": "Combat Behavior",
+    "flucht": "Escape",
+    "jagd": "Hunting",
+    "sonderregeln": "Special Rules",
+    "informationen": "Lore",
+    "npcattribute": "NPC Values",
+    "verteidigungswert": "Defense (DE)",
+    "anzahlaktionen": "Actions",
+    "tp": "DP",
+    "at": "AT",
+    "angriff": "Attack",
+    "domaene": "Domain",
+    "anzahl": "Number",
+    "Magie-TP": "Damage",
+    "Glaube-TP": "Damage",
+    "mitspezialisierung":"with Skill Specialization",
+    "d2": "D2",
+    "d3": "D3",
+    "d4": "D4",
+    "d6": "D6",
+    "d20": "D20",
+    "zusatz-aktivieren":"Additional Status activated"
 }
