add new features and bugfixes
- bugfix: calculation Seelenkraft
- bugfix NPC-Bogen Fernkamof, Range is now a free text
- feature: additional roll for Fertigkeitsspezialisierung
- feature: damage dices are now changed
- feature: additional condition with free text

--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -53,7 +53,6 @@
     "brillant": "Brillant (1700 AP)",
     "charakteristika": "Characteristics",
     "charisma": "Charisma",
-    "d6": "D6+",
     "dauer": "Duration",
     "diskus": "Disk",
     "diskusse": "Disks",
@@ -656,31 +655,40 @@
     "TP": "DP",
     "FK": "RC",
     "rucksack": "Backpack",
-    "allgemein": "Allgemeines",
-    "header-anzeigen": " Kopfzeile einstellen: ",
-    "an": "an",
-    "aus": "aus",
-    "eigenschaften-aus": "Eigenschaften aus",
-    "attribute-aus": "Attribute aus",
-    "npc-bogen": " NPC-Bogen aktivieren: ",
-    "show-le": "Lebensenergie anzeigen: ",
-    "show-ae": "Astralenergie anzeigen: ",
-    "show-ke": "Karmaenergie anzeigen: ",
-    "typus": "Typus",
-    "gkategorie": "Größenkategorie",
-    "schwierigkeit": "Schwierigkeit",
-    "beute": "Beute",
-    "kampfverhalten": "Kampfverhalten",
-    "flucht": "Flucht",
-    "jagd": "Jagd",
-    "sonderregeln": "Sonderregeln",
-    "informationen": "Informationen",
-    "npcattribute": "NSC-Attribute",
-    "verteidigungswert": "Verteidigung (VW)",
-    "anzahlaktionen": "Anzahl Aktionen",
-    "tp": "TP",
+    "allgemein": "Sheet Settings",
+    "header-anzeigen": "Display Header: ",
+    "an": "on",
+    "aus": "off",
+    "eigenschaften-aus": "Attributes off",
+    "attribute-aus": "Base Values off",
+    "npc-bogen": " activate NPC Sheet: ",
+    "show-le": "Show Life Points ",
+    "show-ae": "Show Arcane Energy: ",
+    "show-ke": "Show Karma Points: ",
+    "typus": "Type",
+    "gkategorie": "Size Category",
+    "schwierigkeit": "Summoning Difficulty",
+    "beute": "Loot",
+    "kampfverhalten": "Combat Behavior",
+    "flucht": "Escape",
+    "jagd": "Hunting",
+    "sonderregeln": "Special Rules",
+    "informationen": "Lore",
+    "npcattribute": "NPC Values",
+    "verteidigungswert": "Defense (DE)",
+    "anzahlaktionen": "Actions",
+    "tp": "DP",
     "at": "AT",
-    "angriff": "Angriff",
-    "domaene": "Domäne",
-    "anzahl": "Anzahl"
+    "angriff": "Attack",
+    "domaene": "Domain",
+    "anzahl": "Number",
+    "Magie-TP": "Damage",
+    "Glaube-TP": "Damage",
+    "mitspezialisierung":"with Skill Specialization",
+    "d2": "D2",
+    "d3": "D3",
+    "d4": "D4",
+    "d6": "D6",
+    "d20": "D20",
+    "zusatz-aktivieren":"Additional Status activated"
 }
