Update traslate file spanish to es_v0.1.json
Testing file translate

--- a/Elric/translations/es_v0.1.json
+++ b/Elric/translations/es_v0.1.json
@@ -1,8 +1,8 @@
 {
-	"h2hFumble1": "<b>Slip or trip over rocks, etc</b>.- lose next parry; your foe may disengage.Slip or trip over rocks, etc. lose next parry; your foe may disengage.",
-	"h2hFumble2": "<b>Slip or trip on a corpse or other obstacle</b>-lose next attack; your opponent may disengage.",
-	"h2hFumble3": "<b>Slip or trip in a pool of blood or water or other hazard:-</b> lose next parry and attack;your enemy may disengage.",
-	"h2hFumble4": "<b>Sweat in eyes</b>-parry, dodge,or move only for the next 1D3 combat rounds; your foe may disengage.",
+	"h2hFumble1": "<b>Slip or trip over rocks, etc</b>.- lose next parry; your foe may disengage.Resbalas o tropiezas sobre las rocas, etc. Pierdes la siguiente defensa; Tu enemigo puede retirarse.",
+	"h2hFumble2": "<b>Resbalas o tropiezas en un cuerpo u otro obstáculo</b>-Pierdes el siguiente ataque; Tu oponente puede retirarse.",
+	"h2hFumble3": "<b>Resbalas o tropiezas en un charco de sangre, agua u otro peligro:-</b> Pierdes la siguiente defensa y ataque;Tu enemigo puede retirarse.",
+	"h2hFumble4": "<b>Sudor en los ojos</b>-Sólo puedes parar, esquivar o moverte en los siguientes 1D3 asaltos; El enemigo puede retirarse.",
 	"h2hFumble5": "<b>Shield strap breaks</b>-halve your shield parry percentage until repaired. lnapplicable to a demon shield.",
 	"h2hFumble6": "<b>Distracted</b>-automatic miss on your next attack, in whatever round it occurs.",
 	"h2hFumble7": "<b>Drop weapon</b>-it's at your feet and costs 5 DEX-ranks to recover. Your enemy may disengage. lgnore this fumble if you parry with a shield.",
