[Dark Hersy 1st Edition] improved readability

--- a/Dark_Heresy/translations/de.json
+++ b/Dark_Heresy/translations/de.json
@@ -6,13 +6,13 @@
 	"careerpath": "Karrierpfad",
 	"rank": "Rang",
 	"divination": "Weissagung",
-	"quirck": "Besondere Merkmale",
+	"quirck": "Merkmale",
 	"gender": "Geschlecht",
 	"build": "Körperbau",
 	"dh-height": "Größe",
 	"weight": "Gewicht",
 	"age": "Alter",
-	"past": "Vergangenheit",
+	"past": "Verg.",
 	"skincolor": "Hautfarbe",
 	"haircolor": "Haarfarbe",
 	"eyecolor": "Augenfarbe",
@@ -113,8 +113,8 @@
 	"corruptionpoints:": "Verderbnispunkte:",
 	"degreeofcorruption:": "Verderbnisgrad:",
 	"experiencepoints": "Erfahrungspunkte",
-	"xptospend": "Verfügbare EP",
-	"totalxpspent": "Vergebene EP",
+	"xptospend": "Verfüg. EP",
+	"totalxpspent": "Verge. EP",
 	"totalxp": "Total",
 	"advancementtaken:": "Erfolgte Steigerungen:",
 	"othernotes:": "Weitere Notizen:",
