--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -443,7 +443,7 @@
     "karmale-sonderfertigkeit": "Karmic Special Ability",
     "effekt-durch-wirken": "Effect by Spellworks/Lithurgies",
     "traditionsartefakt": "Tradition Artifact",
-    "abzug-gs": "Mod GS",
+    "abzug-gs": "Mod MOV",
     "abzug-ini": "Mod INI",
     "angelegt": "worn",
     "typ": "Type",
@@ -690,5 +690,15 @@
     "d4": "D4",
     "d6": "D6",
     "d20": "D20",
-    "zusatz-aktivieren":"Additional Status activated"
+    "zusatz-aktivieren":"Additional Status activated",
+    "stufe-iv-zustand": "Level IV - Incapacitated",
+    "ruestung_preset":"Minus ENC/INI/MOV",
+    "ruestung_preset_0":"ENC 0",
+    "ruestung_preset_1":"ENC 0, extra -1 INI, -1 MOV",
+    "ruestung_preset_2":"ENC 1",
+    "ruestung_preset_3":"ENC 1, extra -1 INI, -1 MOV",
+    "ruestung_preset_4":"ENC 2",
+    "ruestung_preset_5":"ENC 2, extra -1 INI, -1 MOV",
+    "ruestung_preset_6":"ENC 3",
+    "ruestung_mod":"Additional Modifier: "
 }
